# chekilytics

./: .gitignore  README.md  cheki-2022-07.csv  color_map.py  figures.py  geo.py  loaders.py  munge.py  notebook.ipynb  pyproject.toml  requirements.txt  streamlit_app.py  utils.py
app/: streamlit_app.py
app/src/: color_map.py  connections.py  figures.py  loaders.py  munge.py  tabs.py  utils.py
data/: acts.json  persons.json  venues.json
src/: color_map.py  connections.py  figures.py  geo.py  loaders.py  models.py  munge.py  tabs.py  utils.py
