[tool.poetry]
name = "chekilytics"
version = "0.1.3"
description = ""
authors = ["Jonathan <jolin3apa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
google = "^3.0.0"
gspread = "^6.0.2"
loguru = "^0.7.2"
matplotlib = "^3.8.4"
pandas = {extras = ["html", "parquet", "performance"], version = "^2.2.2"}
plotly = "^5.21.0"
pydantic = "^2.7.0"
streamlit = "^1.33.0"
validators = "^0.22.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
black = "^24.4.0"
pytest = "^8.1.1"
ruff = "^0.4.1"
jupyterlab = "^4.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
