[tool.poetry]
name = "chekilytics"
version = "0.1.3"
description = ""
authors = ["Jonathan <jolin3apa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12,<3.13"
google = "^3.0.0"
gspread = "^6.1.0"
loguru = "^0.7.2"
matplotlib = "^3.8.4"
pandas = { extras = ["html", "parquet", "performance"], version = "^2.2.2" }
plotly = "^5.22.0"
pydantic = "^2.7.1"
streamlit = "^1.34.0"
validators = "^0.28.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
pytest = "^8.2.0"
ruff = "^0.4.3"
jupyterlab = "^4.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
