[project]
name = "chekilytics"
version = "0.1.3"
description = ""
authors = [{ name = "Jonathan Lin", email = "jolin3apa@gmail.com" }]
dependencies = [
    "google>=3.0.0",
    "gspread>=6.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "pandas[html,parquet,performance]>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.10.6",
    "streamlit>=1.43.2",
    "validators>=0.34.0",
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
